@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
   - Better support for Homebrew and MacPorts on macOS (gh#46 cdalvaro++)
   - New environment variable FFI_CHECKLIB_PACKAGE (gh#46)
+  - New environment variable FFI_CHECKLIB_PATH (gh#52)
 
 0.30      2022-09-22 04:24:26 -0600
   - [ BREAKING CHANGE ]
